# h26x-extractor

./: CHANGELOG.md  HISTORY.md  LICENSE  LICENSE.md  MANIFEST.in  README.md  h26x-extractor-localrun.py  pyproject.toml  release.sh  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
docs/: h26x_extractor.html  index.html  search.js
h26x_extractor/: __init__.py  __main__.py  h26x_parser.py  nalutypes.py
src/h26x_extractor/: __init__.py  __main__.py  h26x_parser.py  nalutypes.py
test/: test.py
tests/: simple_parsing.py  test.h264  test_h26x_extractor.py
